fix search screen dark mode

--- a/ancestral-cookbook/search.html
+++ b/ancestral-cookbook/search.html
@@ -34,9 +34,9 @@
         .filters button {
             padding: 8px;
             border-radius: 6px;
-            border: 1px solid #E4D2AC;
             font-size: 18px;
             font-family: 'EB Garamond', serif;
+            border: none;
         }
 
         .tags-container {
