--- a/ancestral-cookbook/index.html
+++ b/ancestral-cookbook/index.html
@@ -56,7 +56,7 @@
                         <div class="preparation-steps">
                             <h4 class="fixed-title">Repas complet</h4>
                             <p>Crée un menu avec entrée, plat, dessert.</p>
-                            <a href="recipe.html" class="btn delicious-btn">Générer un menu</a>
+                            <a href="menu.html" class="btn delicious-btn">Générer un menu</a>
                         </div>
                     </div>
                 </div>
