finished index layout

--- a/ancestral-cookbook/index.html
+++ b/ancestral-cookbook/index.html
@@ -38,7 +38,7 @@
          <!-- Top Catagory Area -->
         <div style="width: 100%; margin-top: -81px;">
             <div class="single-top-catagory">
-                <img src="img/bg-img/bg2.jpg" alt="">
+                <img src="img/bg-img/bg2.jpg" alt="" style="border-radius: 0; box-shadow: none; ">
                 <!-- Content -->
                 <div class="top-cta-content">
                     <h3>Chercher une recette</h3>
