added page header titles

--- a/ancestral-cookbook/menu.html
+++ b/ancestral-cookbook/menu.html
@@ -88,7 +88,7 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcumb-text text-center">
-                        <h2 class="page-header">Menu</h2>
+                        <h2 class="page-header">Menu Complet</h2>
                     </div>
                 </div>
             </div>
