--- a/ancestral-cookbook/recipe.html
+++ b/ancestral-cookbook/recipe.html
@@ -32,6 +32,7 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcumb-text text-center">
+                        <h2 class="page-header">Recette</h2>
                     </div>
                 </div>
             </div>
