added dark tags

--- a/ancestral-cookbook/search.html
+++ b/ancestral-cookbook/search.html
@@ -75,6 +75,12 @@
             overflow-y: auto;
             background-color: #E4D2AC;
         }
+
+        @media (prefers-color-scheme: dark) {
+            .tag-option {
+                background-color: #7E5B34;
+            }
+        }
     </style>
 </head>
 
