--- a/ancestral-cookbook/index.html
+++ b/ancestral-cookbook/index.html
@@ -42,7 +42,7 @@
                 <!-- Content -->
                 <div class="top-cta-content">
                     <h3>Chercher une recette</h3>
-                    <h6>Cherche un plat parmi l'ensemble des recettes de la famille.</h6>
+                    <h6>Cherche un plat parmi l'ensemble des recettes.</h6>
                     <a href="search.html" class="btn delicious-btn">Recherche</a>
                 </div>
             </div>
